feat# 聚合根demo跑通测试数据